tests/invalid/circ_inst.m
% Test for circular equivalence insts.
:- module circ_inst.

:- interface.

:- inst circ == circ.

:- inst circ1 == circ2.

:- inst circ2 == circ1.

